--- a/deepseek_on_vertex.ipynb
+++ b/deepseek_on_vertex.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/H98HBONBXDwIRSWG3qxq",
+      "authorship_tag": "ABX9TyP0wWJBtIqZ07znKl6oe3dz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -215,7 +215,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Register and Deploy DeepSeek model on Vertex AI"
+        "#### Register and Deploy DeepSeek model on Vertex AI\n",
+        "\n",
+        "Please note that you only have to register and deploy the model to vertex only once"
       ],
       "metadata": {
         "id": "D7f9yXUjlVbX"
@@ -354,19 +356,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Configuration ---\n",
-        "MAX_ITERATIONS = 8\n",
-        "MAX_EXECUTION_TIME = 60\n",
+        "import sys\n",
         "\n",
-        "GENERATION_CONFIG = {\n",
-        "    \"temperature\": 0.8,\n",
-        "    \"candidate_count\": 1,\n",
-        "    \"max_output_tokens\": 8192,\n",
-        "}\n",
+        "if \"google.colab\" in sys.modules:\n",
+        "    from google.colab import auth\n",
         "\n",
-        "GEMINI_API_KEY = userdata.get('GEMINI')\n",
-        "GOOGLE_API_KEY = userdata.get('GOOGLE-API')\n",
-        "CSE_ID = userdata.get(\"CSE-ID\")"
+        "    auth.authenticate_user()"
       ],
       "metadata": {
         "id": "MRqm03Sz5_fF"
@@ -375,49 +370,23 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# LLM"
-      ],
-      "metadata": {
-        "id": "2ceIKSwrsu2W"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Deploy DeepSeek to VertexAI Endpoint"
-      ],
-      "metadata": {
-        "id": "xaH_mKy4jZc_"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Ag8ftSbNjYbI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# ReAct Agent - DeepSeek"
-      ],
-      "metadata": {
-        "id": "8cs_bl_KS9QV"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "import os\n",
+        "import time\n",
+        "from pydantic import Field\n",
+        "from typing import List, Dict, Any, Optional, Union\n",
+        "\n",
         "from google.cloud import aiplatform\n",
+        "\n",
+        "from langchain import hub\n",
+        "from langchain.llms.base import LLM\n",
         "from langchain.chat_models.base import BaseChatModel\n",
         "from langchain.schema import LLMResult, AIMessage\n",
-        "from typing import List, Dict, Any, Optional"
+        "from langchain.agents import AgentExecutor, Tool, create_react_agent\n",
+        "from langchain_community.utilities import GoogleSearchAPIWrapper\n",
+        "from langchain.schema import AgentAction, AgentFinish, LLMResult\n",
+        "from langchain.callbacks.base import BaseCallbackHandler"
       ],
       "metadata": {
         "id": "hNB6tdiEWG62"
@@ -428,9 +397,14 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "MAX_ITERATIONS = 8\n",
+        "# --- Configuration ---\n",
+        "MAX_ITERATIONS = 5\n",
         "MAX_EXECUTION_TIME = 45\n",
+        "\n",
+        "GENERATION_CONFIG = {\n",
+        "    \"temperature\": 0.8,\n",
+        "    \"max_tokens\": 2048,\n",
+        "}\n",
         "\n",
         "\n",
         "GOOGLE_API_KEY = userdata.get('GOOGLE-API')\n",
@@ -445,43 +419,30 @@
     {
       "cell_type": "code",
       "source": [
-        "import sys\n",
-        "\n",
-        "if \"google.colab\" in sys.modules:\n",
-        "    from google.colab import auth\n",
-        "\n",
-        "    auth.authenticate_user()"
+        "# Initialize the Vertex AI client\n",
+        "PROJECT_ID = \"amir-genai-bb\"\n",
+        "LOCATION = os.environ.get(\"GOOGLE_CLOUD_REGION\", \"us-central1\")\n",
+        "aiplatform.init(project=PROJECT_ID, location=LOCATION)\n",
+        "endpoint = aiplatform.Endpoint(endpoint_name=\"YOUR ENDPOINT NAME. something like 5128549095566770688\")"
       ],
       "metadata": {
-        "id": "ukA-Ipc9TIbU"
+        "id": "N-W0pTxRBFwv"
       },
       "execution_count": null,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "This code implements a ReAct agent executor designed to interact with a custom large language model (LLM) and external tools, specifically Google Search. The `CustomLLM`class acts as a bridge, adapting a Vertex AI LLM to the LangChain framework. The `ReActAgentExecutor` class orchestrates the agent's behavior, setting up the LLM, search tools, and the ReAct agent itself. It allows users to provide an input query, which the agent processes by strategically using the search tool and the LLM to generate a response. Additionally, a `TokenCountingCallbackHandler` is incorporated to track the token usage during the agent's execution, facilitating cost analysis and performance monitoring."
+      ],
+      "metadata": {
+        "id": "XFTpyr1PCcIi"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "import time\n",
-        "from typing import Dict, Union, List\n",
-        "from google.cloud import aiplatform\n",
-        "from langchain.agents import AgentExecutor, Tool, create_react_agent\n",
-        "from langchain_community.utilities import GoogleSearchAPIWrapper\n",
-        "from langchain.schema import AgentAction, AgentFinish, LLMResult\n",
-        "from langchain.callbacks.base import BaseCallbackHandler\n",
-        "from langchain import hub\n",
-        "from langchain.llms.base import LLM\n",
-        "from typing import List, Dict, Optional, Any\n",
-        "from pydantic import Field\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Initialize the Vertex AI client\n",
-        "PROJECT_ID = \"amir-genai-bb\"\n",
-        "LOCATION = os.environ.get(\"GOOGLE_CLOUD_REGION\", \"us-central1\")\n",
-        "aiplatform.init(project=PROJECT_ID, location=LOCATION)\n",
-        "endpoint = aiplatform.Endpoint(endpoint_name=\"5120549895366770688\")\n",
-        "\n",
         "class CustomLLM(LLM):\n",
         "    \"\"\"A wrapper for the custom Vertex AI LLM that conforms to LangChain's LLM API.\"\"\"\n",
         "\n",
@@ -500,15 +461,13 @@
         "                    \"@requestFormat\": \"textGeneration\",\n",
         "                    \"prompt\": prompt,\n",
         "                    \"max_tokens\": self.generation_config.get(\"max_tokens\", 2048),\n",
-        "                    \"temperature\": self.generation_config.get(\"temperature\", 0.7),\n",
+        "                    \"temperature\": self.generation_config.get(\"temperature\", 0.8),\n",
         "                }\n",
         "            ]\n",
         "        }\n",
         "\n",
         "        response = endpoint.predict(instances=prediction_request[\"instances\"])\n",
         "        return response.predictions[0] if response.predictions else \"\"\n",
-        "\n",
-        "\n",
         "\n",
         "class ReActAgentExecutor:\n",
         "    \"\"\"\n",
@@ -615,12 +574,12 @@
       "source": [
         "llm = CustomLLM(\n",
         "    model=\"vertex-ai\",\n",
-        "    generation_config={\"max_tokens\": 2048, \"temperature\": 0.7}\n",
+        "    generation_config=GENERATION_CONFIG\n",
         ")\n",
         "\n",
         "agent_executor = ReActAgentExecutor(\n",
         "    model=llm,\n",
-        "    generation_config={\"max_tokens\": 2048, \"temperature\": 0.7},\n",
+        "    generation_config=GENERATION_CONFIG,\n",
         "    max_iterations=8,\n",
         "    max_execution_time=60,\n",
         "    google_api_key=GOOGLE_API_KEY,\n",
@@ -649,7 +608,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "result = agent_executor.run(train_ds[10][\"question\"])"
       ],
       "metadata": {
